fix expiration date check and made error display unwrapped

--- a/checkout.css
+++ b/checkout.css
@@ -168,6 +168,7 @@ control{
   left:0.5em;
   text-align:left;
   z-index:1;
+  white-space:nowrap;
 }
 .select2-container--default.select2-container--disabled .select2-selection--single{
   background-color:#eee !important;
@@ -265,6 +266,7 @@ confirm .crowdstart-terms > control{
 }
 confirm .crowdstart-message{
   display:table;
+  white-space:nowrap;
   top:-10px;
   left:5px;
 }
@@ -1216,6 +1218,7 @@ label{
 .crowdstart-card-icons .crowdstart-card-icon .amex{
   background:#0971bc;
   background-image:-webkit-radial-gradient(circle farthest-corner at top left, #7ecdf2, #0971bc 60%);
+  background-image:-webkit-radial-gradient(top left, circle farthest-corner, #7ecdf2, #0971bc 60%);
   background-image:radial-gradient(circle farthest-corner at top left, #7ecdf2, #0971bc 60%);
   font-size:2em;
   font-weight:900;
