--- a/css/confirm.styl
+++ b/css/confirm.styl
@@ -7,5 +7,6 @@ confirm
 
   .crowdstart-message
     display: table
+    white-space:nowrap
     top: -10px;
     left: 5px;
