--- a/css/widget.styl
+++ b/css/widget.styl
@@ -149,6 +149,7 @@ control
   left: .5em
   text-align: left
   z-index: 1
+  white-space:nowrap
 
 .select2-container--default.select2-container--disabled .select2-selection--single
   background-color: #eee !important
